pull portaudio for asiolistcmakepatch, add GetAllInfo, example test_sine_devices.lua

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 [submodule "portaudio"]
 	path = portaudio
-	url = https://github.com/PortAudio/portaudio
+	url = https://github.com/sonoro1234/portaudio
+	branch = asiolistcmakepatch
 
