switch sonoro1234 to PortAudio with patched asiolist.cpp

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,4 @@
 [submodule "portaudio"]
 	path = portaudio
-	url = https://github.com/sonoro1234/portaudio
-	branch = asiolistcmakepatch
+	url = https://github.com/PortAudio/portaudio
 
